objects/Order_Refund_Credit__c.object
<CustomObject>
    <fields>
        <fullName>Address_is_Serviceable__c</fullName>
        <description>Field used to capture if the address is serviceable for GotJunk</description>
        <label>Address is Serviceable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Price__c</fullName>
        <description>Price to be used for adjustments. Used in ORC Amount to Refund</description>
        <formula>if(ispickval( Reason__c , &quot;Order Not Received&quot;)=TRUE,0,if(Price_Override__c&gt;0,Price_Override__c, Amount_Charged__c ))- (Amount_Charged__c * Discount__c) -  Manual_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_Full_Order__c</fullName>
        <description>Full order amount charged (excludes tax and shipping fee) - Discounted Amount</description>
        <inlineHelpText>Total amount charged on the order</inlineHelpText>
        <label>Amount Charged - Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_Item__c</fullName>
        <description>Individual Item Price (Discounted Amount). Line Item Only</description>
        <label>Amount Charged - Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_Tax__c</fullName>
        <description>Line item or full order tax amount depending on ORC Type</description>
        <inlineHelpText>Line item or full order tax amount depending on ORC Type</inlineHelpText>
        <label>Amount Charged - Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Line item or full order amount depending on ORC Type (excludes tax and shipping fee) - Discounted Amount (ie actual amount charged)</description>
        <inlineHelpText>Line item or full order amount depending on ORC Type</inlineHelpText>
        <label>Amount Charged ORC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_Credit_Card__c</fullName>
        <description>Total order amount charged to credit card.</description>
        <label>Amount Charged to Credit Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Charged_to_Gift_Card__c</fullName>
        <description>Total order amount charged to gift card</description>
        <label>Amount Charged to Gift Card(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_Reversal__c</fullName>
        <label>Amount of Reversal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_Refund__c</fullName>
        <formula>if(OR(ispickval( Reason__c , &quot;Order Not Received&quot;)=TRUE, Quantity__c = Quantity_Not_Received__c ), Amount_Charged__c,Amount_Charged__c - Adjusted_Price__c) + if( Credit_Shipping_Fee__c =TRUE, Shipping_Fee__c ,0)+Other_Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORC Amount to Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Required_Flag__c</fullName>
        <formula>IF( Approval_Required__c , IMAGE( &quot;/img/samples/flag_red.gif&quot;, &quot;Approval Required&quot; ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <formula>( Amount_to_Refund__c &gt;= 100 ||  Replacement_Gift_Card_Amount__c &gt;=100 || ISPICKVAL(Gift_Card_Amount__c, &quot;100&quot;) ) 
&amp;&amp; 

NOT(ISPICKVAL(ORC_Status__c, &apos;Approved&apos;) || ISPICKVAL(ORC_Status__c, &apos;Closed&apos;) || ISPICKVAL(ORC_Status__c, &apos;Cancelled&apos;) || ISPICKVAL(ORC_Status__c, &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who approved the ORC</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Refunds_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The Business Unit of the ORC</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Amount_Refund__c</fullName>
        <description>Final amount to refund to the credit card. Populated via Process.</description>
        <label>CC Amount Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Profile__c</fullName>
        <formula>Case__r.Case_Owner_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Case__r.Case_Owner_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>IF(ISBLANK(Case__r.Owner:Queue.QueueName),
 Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName,
 Case__r.Owner:Queue.QueueName)</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case associated to the ORC</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Refunds/Credits</relationshipLabel>
        <relationshipName>Order_Refunds_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Web_Site__c</fullName>
        <label>Competitor Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The Country from the Order&apos;s Billing Address</description>
        <inlineHelpText>The Country from the Order&apos;s Billing Address</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Alias__c</fullName>
        <label>Credit Card Alias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number_last_4_digits__c</fullName>
        <label>Credit Card Number (last 4 digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Shipping_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Shipping Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name_on_Order_Received__c</fullName>
        <label>Customer Name on Order Received</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Package_was_Returned__c</fullName>
        <label>Date Package was Returned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Sale__c</fullName>
        <label>Date of Sale</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debit_Amount__c</fullName>
        <description>The amount that HBC is charging the customer</description>
        <inlineHelpText>The amount that HBC is charging the customer</inlineHelpText>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit_Charge_Reason__c</fullName>
        <description>Field used to capture the reason for debiting a customer</description>
        <label>Debit/Charge Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reverse a ORC Discount</fullName>
                </value>
                <value>
                    <fullName>Customer Requests Expedited Delivery</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debit_Percentage__c</fullName>
        <description>The percentage you are charging the customer</description>
        <inlineHelpText>The percentage you are charging the customer</inlineHelpText>
        <label>Debit Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <description>Reason Why ORC was declined</description>
        <label>Reason (Required for Declines)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Status__c</fullName>
        <description>Field captures if the ORC was either approved or declined</description>
        <inlineHelpText>Field captures if the ORC was either approved or declined</inlineHelpText>
        <label>Final Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Gift_Card_Amount__c</fullName>
        <description>Total amount of the gift card to be issues including refunds and appeasements.</description>
        <formula>New_GC_Amount__c +  Replacement_Gift_Card_Amount__c + if(isblank(text(Gift_Card_Amount__c)),0, value(text(Gift_Card_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Mattress_Pickup_Date_Time__c</fullName>
        <description>The first requested mattress pickup date and time</description>
        <inlineHelpText>The first requested mattress pickup date and time</inlineHelpText>
        <label>First Mattress Pickup Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Field used to capture the contact for pick up&apos;s first name</description>
        <inlineHelpText>Represents the contact for the pick up&apos;s first name</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Credit_Card_Number_Old__c</fullName>
        <label>Full Credit Card Number OLD</label>
        <length>80</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Full_Credit_Card_Number__c</fullName>
        <description>Last 4 digit of the credit card. *** added by the integration feed</description>
        <label>Credit Card Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Amount__c</fullName>
        <description>GC amount from the flow that is for appeasement and not to refund/credit purchase.</description>
        <label>Appeasement Gift Card Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Card_Appeasement_Reason__c</fullName>
        <description>The reason an agent is giving a gift card appeasement</description>
        <label>Gift Card Appeasement Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Appeasement_Value__c</fullName>
        <description>The value of the gift cards being given to clients for appeasement</description>
        <label>Gift Card Appeasement Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in page layout display filter. Populated by the ORC flow</description>
        <label>Initial Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <description>Will be set to Full Order when a full order ORC is initiated.</description>
        <label>Item Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Represents the contact for the pick up&apos;s last name</description>
        <inlineHelpText>Represents the contact for the pick up&apos;s last name</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Tier__c</fullName>
        <label>Loyalty Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Associate/Retiree</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>PLCC non-Premier</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Adjustment__c</fullName>
        <label>Manual Adjustment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HBC PLCC</fullName>
                </value>
                <value>
                    <fullName>L+T PLCC</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>HBC MasterCard</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_GC_Amount__c</fullName>
        <description>Used in gift card replacement for new GC amount</description>
        <label>New GC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Gift_Card_Number__c</fullName>
        <label>New Gift Card Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Unit_Price__c</fullName>
        <label>New Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Mattresses_for_Pickup__c</fullName>
        <description>The number of mattresses for pickup</description>
        <label>Number of Mattresses for Pickup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMS_Transaction_Number__c</fullName>
        <label>OMS Transaction Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORC_Status__c</fullName>
        <label>ORC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Requires Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Items_Table__c</fullName>
        <description>A full table of all the order line items for an order</description>
        <inlineHelpText>A full table of all the order line items for an order</inlineHelpText>
        <label>Order Items Table</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_Number_Received__c</fullName>
        <label>Order Number Received</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Gift_Card_Balance__c</fullName>
        <label>Original Gift Card Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Gift_Card_Number__c</fullName>
        <label>Original Gift Card Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Gift_Card_Status__c</fullName>
        <label>Original Gift Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Refund__c</fullName>
        <label>Other Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>The number to reach the contact during pickup</description>
        <inlineHelpText>The number to reach the contact during pickup</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pickup_City__c</fullName>
        <description>The city that the mattress return is located in</description>
        <inlineHelpText>The city that the mattress return is located in</inlineHelpText>
        <label>Pickup City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Country__c</fullName>
        <description>The country the mattress return is located</description>
        <inlineHelpText>The country the mattress return is located</inlineHelpText>
        <label>Pickup Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Postal_Code__c</fullName>
        <description>The postal code that the mattress return is located in</description>
        <inlineHelpText>The postal code that the mattress return is located in</inlineHelpText>
        <label>Pickup Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Province__c</fullName>
        <description>The province that the mattress return is located in</description>
        <inlineHelpText>The province that the mattress return is located in</inlineHelpText>
        <label>Pickup Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Street__c</fullName>
        <description>The street that the mattress return is located in</description>
        <inlineHelpText>The street that the mattress return is located in</inlineHelpText>
        <label>Pickup Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_Override_Reason__c</fullName>
        <label>Price Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item on sale</fullName>
                </value>
                <value>
                    <fullName>Amount charged different from order confirmation</fullName>
                </value>
                <value>
                    <fullName>Price tag on item different from price charged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Override__c</fullName>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Gift_Card_Amount__c</fullName>
        <description>The amount of a promo code gift card</description>
        <label>Promo Code Gift Card Amount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Date__c</fullName>
        <label>Promo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_Not_Received__c</fullName>
        <label>Quantity Not Received</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Line item quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Debit Category</fullName>
                </value>
                <value>
                    <fullName>Defective Item</fullName>
                </value>
                <value>
                    <fullName>Gift Card (Appeasement)</fullName>
                </value>
                <value>
                    <fullName>Gift Card (Refund)</fullName>
                </value>
                <value>
                    <fullName>Gift Card to Original Tender</fullName>
                </value>
                <value>
                    <fullName>Mattress</fullName>
                </value>
                <value>
                    <fullName>Missing Items</fullName>
                </value>
                <value>
                    <fullName>Order Not Received</fullName>
                </value>
                <value>
                    <fullName>Price Adjustment</fullName>
                </value>
                <value>
                    <fullName>Price Match</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Promo Questions/Problem</fullName>
                </value>
                <value>
                    <fullName>Return Problem</fullName>
                </value>
                <value>
                    <fullName>Shipping Fee</fullName>
                </value>
                <value>
                    <fullName>Tax Exclusion</fullName>
                </value>
                <value>
                    <fullName>Wrong Item Received</fullName>
                </value>
                <value>
                    <fullName>Wrong Order Received</fullName>
                </value>
                <value>
                    <fullName>Returns Not Received</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Charge Customer</fullName>
                </value>
                <value>
                    <fullName>Promo Code Gift Card</fullName>
                </value>
                <value>
                    <fullName>EGC to Account</fullName>
                </value>
                <value>
                    <fullName>Return Not Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Gift_Card_Change__c</fullName>
        <label>Reason for Gift Card Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment to Gift Card Online Order</fullName>
                </value>
                <value>
                    <fullName>Bridal Registry</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Delivery Issue</fullName>
                </value>
                <value>
                    <fullName>Depleted</fullName>
                </value>
                <value>
                    <fullName>Fulfillment Issue</fullName>
                </value>
                <value>
                    <fullName>Inactive/Purged</fullName>
                </value>
                <value>
                    <fullName>Lost/Stolen</fullName>
                </value>
                <value>
                    <fullName>Product Damaged</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Social Media Issue</fullName>
                </value>
                <value>
                    <fullName>Virtual or Traditional</fullName>
                </value>
                <value>
                    <fullName>Wrong Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Gift_Card_Amount__c</fullName>
        <description>Gift card amount that is not from an appeasement.</description>
        <formula>Final_Gift_Card_Amount__c - if(isblank(text(Gift_Card_Amount__c))=false,Value(text(Gift_Card_Amount__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refund Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Gift_Card_Amount__c</fullName>
        <label>Replacement Gift Card Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversal_Date_Time__c</fullName>
        <label>Reversal Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SKU_Received__c</fullName>
        <label>SKU# Received</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU#</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Mattress_Pick_Up_Date_Time__c</fullName>
        <description>The second requested mattress pickup date and time</description>
        <inlineHelpText>The second requested mattress pickup date and time</inlineHelpText>
        <label>Second Mattress Pick Up Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipping_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Full Order Shipping Fee</description>
        <inlineHelpText>Full order shipping fee</inlineHelpText>
        <label>Amount Charged - Shipping Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada Post</fullName>
                </value>
                <value>
                    <fullName>Canpar</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Purolator</fullName>
                </value>
                <value>
                    <fullName>Smartpost/USPS</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>The State/Province from the Order&apos;s Billing Address</description>
        <inlineHelpText>The State/Province from the Order&apos;s Billing Address</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_in_OMS__c</fullName>
        <label>Status in OMS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store (MHF Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_temp__c</fullName>
        <label>Store(temp)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exclusion_Code__c</fullName>
        <label>Tax Exclusion Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exclusion_Reason__c</fullName>
        <label>Tax Exclusion Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>